deploy/ingress-yubikey.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "ingress-yubikey"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-yubikey
  namespace: ingress-yubikey
  labels:
    app: ingress-yubikey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-yubikey
  template:
    metadata:
      labels:
        app: ingress-yubikey
    spec:
      containers:
      - name: ingress-yubikey
        image: jakexks/ingress-yubikey
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 443
      serviceAccountName: ingress-yubikey
