deploy/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "test-ingress-class"
spec:
  ingressClassName: "yubikey-ingress"
  tls:
  - hosts:
      - testtest
    secretName: ignored
  rules:
  - host: testtest
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80
